# pawel

./: .gitignore  pyproject.toml
src/pawel/: better_bot.py  chat_bot.py  data_processor.py  run_with_server.py  server.py  todo.py  ui_tryout.py
src/pawel/api/: server.py
src/pawel/chess/: ai.py  chess_nn.py  current_approach_rework_jan.py  drafts.py  min_ol.py  primes_new.py  rectangle.py  sunday.py  test_current_approach_rework_jan.py  very_latest_jan25.py
src/pawel/dec_almost/: best.py  more_efficient.py  nov24.py  nov24.py_old  primes_check.py  test_nov24.py
src/pawel/keep/: decs.py  dem.py  gc_dem.py  nov24.py  polefig2.py  polefigure1.py  prod.py  screen_xref.py  stack_queue.py  test_board.py  test_bot.py  translate_coordinates.py  vectordb.py
src/pawel/keep/data/chroma.db/: chroma.sqlite3
src/pawel/nn/: explain_dot_product.ipynb  learn_numpy.ipynb  predict.py
src/pawel/prior/: chat_bot.py  classes.py  imrec.py  ir,py  speek.py  tokens.py
src/pawl/chess/: currentApproach_prior.py  current_approach_rework.py  math_approach.py
src/pawl/dec_almost/: hq.py  nov24_new.py  primes.py  sp_and_mem.py
src/pawl/keep/: bfs.md  bfs_ex.py  bfs_navig.py  chess_p.py  classes.py  db_analysis.py  gpt_version2.py  iterloop.py  new_oochesss.py  nov24.md  overview.md  partial.py  pf2.py  power_num.py  tel.py  telef.py  test_new_oo_chess.py  tv.py
src/pawl/nn/: explain_dot_prod.py  neural_net_ex.ipynb  notes.md.py  predict.ipynb
