[project]
name = "pawel"
version = "0.1.0"
description = ""
authors = [{ name = "Andy Miles", email = "akmiles@icloud.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "transformers>=4.48.0,<5",
    "numpy>=2.0.2,<3",
    "matplotlib>=3.10.0,<4",
    "keras>=3.8.0,<4",
    "tensorflow>=2.18.0,<3",
    "pandas>=2.2.3,<3",
    "torch>=2.6.0",
]

[tool.hatch.build.targets.sdist]
include = ["src/pawel"]

[tool.hatch.build.targets.wheel]
include = ["src/pawel"]

[tool.hatch.build.targets.wheel.sources]
"src/pawl" = "pawel"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
